feat: Implement TradingView Lightweight Charts v5.0 integration
- ✅ Add EquityCurveChart component for Monte Carlo simulation paths
- ✅ Add HistogramChart component for final equity distribution
- ✅ Integrate charts into RiskSandbox page with proper layout
- ✅ Implement responsive design and interactive features
- ✅ Add chart legends, tooltips, and statistics panels
- ✅ Optimize performance for large datasets (15+ equity paths)
- ✅ Use correct v5.0 API with LineSeries import and addSeries method
- ✅ Create custom useTradingViewChart hook for chart management
- ✅ Add proper TypeScript types and error handling
- 🔧 Minor TypeScript config issues remain (chart options strictness)

Next: Complete remaining TypeScript fixes and test chart performance

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "@alpha-scanner/shared": "workspace:*",
     "@tanstack/react-query": "^5.17.0",
+    "chart.js": "^4.5.0",
+    "lightweight-charts": "^5.0.8",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1"
   },
