--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -19,6 +19,7 @@ celery = "^5.3.4"
 sqlalchemy = "^2.0.23"
 alembic = "^1.13.0"
 psycopg2-binary = "^2.9.9"
+numpy = "^1.24.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
