--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,43 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-dev-debug.log
-
-# Dependency directories
-node_modules/
-
 # Environment variables
 .env
+.env.local
+.env.*.local
+apps/api/.env
+apps/web/.env
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Dependencies
+node_modules/
+apps/*/node_modules/
+packages/*/node_modules/
 
-# OS specific
+# Build outputs
+dist/
+build/
+apps/*/dist/
+apps/*/build/
+packages/*/dist/
+
+# Cache and temporary files
+.cache/
+.turbo/
+*.log
+*.tmp
 .DS_Store
 
-# Task files
-# tasks.json
-# tasks/ 
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.egg-info/
+.pytest_cache/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
