--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
     container_name: alpha-scanner-web
     restart: unless-stopped
     environment:
-      - VITE_API_URL=http://localhost:8000
+      - VITE_API_BASE_URL=/api/v1
     ports:
       - "3000:3000"
     depends_on:
