feat(web): apply VDL theme (colors, typography, spacing) and fix hover contrast\n\n- Import nova-styles and visa-light theme\n- Map app tokens to VDL palette variables\n- Adopt VDL typography and spacing scales\n- Update table hover color for readability\n- Fix dev proxy to IPv4 to resolve ECONNREFUSED

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,11 +10,15 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
-    "clean": "rm -rf dist node_modules/.vite"
+    "clean": "rm -rf dist node_modules/.vite",
+    "postinstall": ""
   },
   "dependencies": {
     "@alpha-scanner/shared": "workspace:*",
     "@tanstack/react-query": "^5.17.0",
+    "@visa/nova-icons-react": "^2.0.4",
+    "@visa/nova-react": "^2.5.4",
+    "@visa/nova-styles": "^1.6.2",
     "chart.js": "^4.5.0",
     "lightweight-charts": "^5.0.8",
     "react": "^18.2.0",
