--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "FastAPI backend for the Alpha Scanner platform",
   "scripts": {
-    "dev": "poetry run uvicorn app.main:app --reload --host 0.0.0.0 --port 8000",
+    "dev": "DATABASE_URL=postgresql://postgres:postgres@localhost:5433/app USE_POLYGON_LIVE=false poetry run uvicorn app.main:app --reload --host 0.0.0.0 --port 8000",
     "start": "poetry run uvicorn app.main:app --host 0.0.0.0 --port 8000",
     "install": "poetry install",
     "lint": "poetry run ruff check .",
