--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "packageManager": "pnpm@8.15.6",
   "scripts": {
-    "dev": "turbo run dev",
+    "dev": "concurrently -k -n api,web -c blue,green \"pnpm --filter @alpha-scanner/api dev\" \"pnpm --filter @alpha-scanner/web dev\"",
+    "dev:api": "pnpm --filter @alpha-scanner/api dev",
+    "dev:web": "pnpm --filter @alpha-scanner/web dev",
     "build": "turbo run build",
     "lint": "turbo run lint",
     "test": "turbo run test",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@turbo/gen": "^1.10.16",
+    "concurrently": "^8.2.2",
     "prettier": "^3.1.1",
     "turbo": "^1.10.16"
   },
