chore(supabase): env scaffolding, config wiring, prefer pooled DB at runtime; alembic uses direct URL (5432) for migrations
- env.example: add SUPABASE_* (URLs, keys, JWKS/JWT) and Vite vars
- config.py: add Supabase settings
- database.py: prefer SUPABASE_DB_POOL_URL
- alembic/env.py: use SUPABASE_DB_DIRECT_URL for migrations

--- a/env.example
+++ b/env.example
@@ -8,6 +8,19 @@ REDIS_URL=redis://redis:6379/0
 # Database Configuration
 DATABASE_URL=postgresql://postgres:postgres@postgres:5432/app
 
+# Supabase Configuration
+# Use direct URL (5432) for migrations and pooled URL (6543, pgbouncer) for runtime
+# Ensure sslmode=require for hosted Supabase connections
+# Populate these when moving to Supabase
+SUPABASE_URL=https://your-project-ref.supabase.co
+SUPABASE_ANON_KEY=your_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+SUPABASE_DB_DIRECT_URL=postgresql://user:password@db.supabase.co:5432/postgres?sslmode=require
+SUPABASE_DB_POOL_URL=postgresql://user:password@db.supabase.co:6543/postgres?sslmode=require&pgbouncer=true
+SUPABASE_JWKS_URL=${SUPABASE_URL}/auth/v1/jwks
+SUPABASE_JWT_ISSUER=${SUPABASE_URL}/auth/v1
+SUPABASE_JWT_AUDIENCE=authenticated
+
 # Timezone Configuration
 TZ=UTC
 
@@ -25,6 +38,9 @@ API_WORKERS=1
 # Web Configuration
 WEB_PORT=3000
 VITE_API_URL=http://localhost:8000
+# Supabase for web (Vite)
+VITE_SUPABASE_URL=https://your-project-ref.supabase.co
+VITE_SUPABASE_ANON_KEY=your_anon_key_here
 
 # Development
 NODE_ENV=development
