feat(db): support SSL CA certificate for Postgres connections (runtime + Alembic)
- env.example: DB_SSLMODE, DB_SSLROOTCERT (optional client cert/key)
- config: SSL envs
- database.py: pass ssl connect_args to SQLAlchemy
- alembic/env.py: pass ssl connect_args for migrations

--- a/env.example
+++ b/env.example
@@ -21,6 +21,14 @@ SUPABASE_JWKS_URL=${SUPABASE_URL}/auth/v1/jwks
 SUPABASE_JWT_ISSUER=${SUPABASE_URL}/auth/v1
 SUPABASE_JWT_AUDIENCE=authenticated
 
+# Optional SSL configuration for Postgres connections
+# Use when you need to verify server certs with a custom CA
+DB_SSLMODE=verify-full
+DB_SSLROOTCERT=/absolute/path/to/your/ca_certificate.pem
+# Optionally, if client cert/key auth is required (rare for Supabase)
+# DB_SSLCERT=/absolute/path/to/client.crt
+# DB_SSLKEY=/absolute/path/to/client.key
+
 # Timezone Configuration
 TZ=UTC
 
