--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -20,6 +20,7 @@ sqlalchemy = "^2.0.23"
 alembic = "^1.13.0"
 psycopg2-binary = "^2.9.9"
 numpy = "^1.24.0"
+PyJWT = {version = "^2.8.0", extras = ["crypto"]}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
