--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@alpha-scanner/shared": "workspace:*",
+    "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.17.0",
     "@visa/nova-icons-react": "^2.0.4",
     "@visa/nova-react": "^2.5.4",
